<resources>
    <string name="app_name">4TR Productivity App</string>
    <string name="action_settings">Settings</string>
    <string name="c_time">%d</string>
    <string name="completed_in">Completed In: %d m</string>
    <string name="expected_time">Expected Time: %d m</string>
    <string name="time_result">Points: %s</string>
    <string name="stopIn">Stopped at: %s</string>
    <string name="showExpectedTime">%d m.</string>
    <string name="weeklyAverageValue">%d h</string>
    <string name="weeklyTotalHours">%d h</string>
    <string name="quoteForTheDayString">Quote Of The Day\n\n%s\n\nCLOSE</string>
    <string name="expectedTime">%d m</string>
    <string name="supportMe">The 4TR Productivity App is not just about timer or to-do, it\'s way more than that. I\'m
        working really hard for this app, I assure every single user out there that more features and improvements will be there, But that won\'t happen
        if you don\'t help me. \nPlease support me by sharing this app and rating this app 5 star on the Playstore.
    </string>
    <string name="task_should_complete_in">Task should be completed in:</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="priority_add_task">Priority</string>
    <string name="step_1">Step 1: Tap on the add button at the bottom navigation bar to make a task.</string>
    <string name="step_2">Step 2: Add title, description, time and priority for the task.</string>
    <string name="note_1">Note: If you want to save multiple tasks at once, use \'Multi-task\'.</string>
    <string name="note_2">Note: The tasks will be ordered by their priority.</string>
    <string name="step_3">Step3: Tap on task you want to accomplish.</string>
    <string name="note_3">Note: Don\'t tap on the title of the task, this will mark that task as completed.</string>
    <string name="step_4">Step 4: Start the timer and start working.</string>
    <string name="note_4">Note: If you won\'t be able to complete the task in the expected time, start the timer again
        and stop when completed.
    </string>
    <string name="note_5">Note: Tap on \'Done\' button when task completes, this will record the data and redirect you
        to the To-Do tab. Now mark your task as completed.
    </string>
    <string name="note_6">Note: The data won\'t be recorded if you put the 4TR Productivity App in the background or
        lock the device when the timer is running.
    </string>
    <string name="note_7">Note: The screen will stay awake when the timer is running, don\'t worry! this won\'t drain
        much battery and this will be solved really soon. (Really really soon)
    </string>
    <string name="note_8">Note: Turn the brightness down and enable dark mode to save battery.</string>
    <string name="step_5">Step 5: To see your completed tasks go to \'Checked\' tab.</string>
    <string name="please_read_this">Please read this!</string>
    <string name="please_support_me">Please Support Me!</string>
    <string name="multi_tasks">Multi-Tasks</string>
    <string name="add_save">Save</string>
    <string name="result_stats">Result</string>
    <string name="daily_average">Daily Average:</string>
    <string name="total_hours">Total Hours (last 7 days):</string>
    <string name="your_name">Your Name</string>
    <string name="stat_content_des">statistics</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="start_timer">start timer</string>
    <string name="pause_timer">Pause Timer</string>
</resources>
