<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout>-->

    <ScrollView

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            tools:context=".InstructionsActivity">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/step_1"/>


            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/step_2"/>


            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/note_1"/>

                <ImageView android:layout_width="wrap_content" android:layout_height="150dp"
                           android:layout_gravity="center_horizontal"
                           android:padding="8dp"
                           android:src="@drawable/inst_multi"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/note_2"/>

                <ImageView android:layout_width="wrap_content" android:layout_height="200dp"
                           android:layout_gravity="center_horizontal"
                           android:padding="8dp"
                           android:src="@drawable/inst_priotity"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/step_3"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="4dp"
                          android:text="@string/note_3"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/step_4"/>

                <ImageView android:layout_width="200dp" android:layout_height="200dp"
                           android:layout_gravity="center_horizontal"
                           android:padding="8dp"
                           android:src="@drawable/inst_timer"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/note_4"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="2dp"
                          android:text="@string/note_5"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="2dp"
                          android:text="@string/note_6"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="2dp"
                          android:text="@string/note_7"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="2dp"
                          android:text="@string/note_8"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_height="wrap_content"
                          android:text="@string/step_5"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_margin="4dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/colorAccent"
                          android:textSize="18sp"
                          android:layout_gravity="center_horizontal"
                          android:layout_height="wrap_content"
                          android:text="@string/please_read_this"/>

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:layout_gravity="center_horizontal"
                           android:padding="8dp"
                           android:src="@drawable/launcher_logo"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/lightTextGrey"
                          android:layout_marginTop="4dp"
                          android:layout_gravity="center_horizontal"
                          android:layout_height="wrap_content"
                          android:text="@string/supportMe"/>

                <TextView android:layout_width="wrap_content"
                          android:textColor="@color/colorAccent"
                          android:textSize="18sp"
                          android:layout_gravity="center_horizontal"
                          android:layout_height="wrap_content"
                          android:text="@string/please_support_me"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
<!--</android.support.constraint.ConstraintLayout>-->